# GemsPy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  AUTHORS.txt  CLAUDE.md  README.md  build_time_scalability.csv  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: developer-guide.md  getting-started.md  index.md  user-guide.md
docs/agents/: python-convention.md  testing.md
docs/user-guide/: antares-format-comparison.md  building.md  converters.md  inputs.md  libraries.md  optim-config.md  optimisation.md  outputs.md  scenario-builder.md
grammar/: Expr.g4
src/antares_runner/: antares_runner.py
src/gems/: utils.py
src/gems/expression/: __init__.py  copy.py  degree.py  equality.py  evaluate.py  evaluate_parameters.py  expression.py  indexing.py  port_operator.py  print.py  visitor.py
src/gems/expression/parsing/: parse_expression.py
src/gems/input_converter/src/: config.py  converter.py  logger.py  main.py  parsing.py  utils.py
src/gems/libs/: __init__.py
src/gems/libs/antares_historic/: antares_historic.yml
src/gems/libs/pypsa_models/: pypsa_models.yml
src/gems/libs/reference_models/: andromede_v1_models.yml
src/gems/main/: main.py
src/gems/model/: __init__.py  common.py  constraint.py  model.py  parsing.py  port.py  resolve_library.py  variable.py
src/gems/optim_config/: __init__.py  parsing.py
src/gems/pypsa_converter/: parsing.py  pypsa_converter.py
src/gems/pypsa_converter/models/: __init__.py  modified_base_model.py
src/gems/session/: __init__.py  session.py
src/gems/simulation/: __init__.py  couplings.py  decision_tree.py  extra_output.py  linear_expression.py  linearize.py  linopy_linearize.py  linopy_problem.py  optimization.py  output_values.py  output_values_base.py  runner.py  simulation_table.py  strategy.py  vectorized_builder.py
src/gems/study/: __init__.py  data.py  folder.py  network.py  parameters.py  parsing.py  resolve_components.py  runner.py  scenario_builder.py  study.py  system.py
tests/antares_historic/: conftest.py  test_antares_historic.py  test_link_model.py  test_sts_model.py  test_thermal_model.py  utils.py
tests/antares_historic/antares-resources/reference_libraries/: antares_legacy_models.yml
tests/antares_historic/data/: constant_load.txt  load_matrix_1.txt  load_matrix_2.txt  load_matrix_3.txt  load_matrix_original.txt
tests/e2e/functional/: conftest.py  perf_pypsa.py  test_build_decomposed_problem.py  test_component_dependent_time_shift.py  test_investment.py  test_investment_pathway.py  test_libs_python_system_python.py  test_libs_yaml_system_python.py  test_libs_yaml_system_yaml.py  test_optim_modes.py  test_out_of_bounds_processing.py  test_performance.py  test_rolling_horizon_suboptimality.py  test_scalability.py  test_scenario_builder.py  test_simtable_timeblock.py  test_stochastic.py  test_study_from_folder.py
tests/e2e/functional/libs/: lib_time_shift.yml  standard.py
tests/e2e/functional/series/: demand_shift_test.txt  demand_var_down_time.txt
tests/e2e/functional/systems/: system_time_shift_per_component.yml  system_with_varying_down_time.yml  with_scenarization.yml
tests/e2e/integration/: test_benders_decomposed.py
tests/e2e/models/andromede-v1/: test_andromede_v1_models.py
tests/e2e/models/operators/: test_operators_v1.py
tests/e2e/models/poc-various-models/: test_ac_link.py  test_electrolyzer.py  test_electrolyzer_n_inputs.py  test_electrolyzer_n_inputs_yaml.py  test_quota_co2.py  test_quota_co2_yaml.py  test_short_term_storage_complex.py
tests/e2e/studies/: test_studies.py
tests/e2e/studies/13_1/: parameters.yml
tests/e2e/studies/13_2/: parameters.yml
tests/input_converter/: conftest.py  test_converter.py  test_converter_modeler_scenariobuilder.py  test_thermal_prepro.py
tests/pypsa_converter/: test_advanced_pypsa_cases.py  test_pypsa_converter.py  utils.py
tests/unittests/data/: test_data.py
tests/unittests/expressions/visitor/: test_copy.py  (+6 more)
tests/unittests/lib_parsing/: test_lib_parsing.py  test_objective_contribution.py
tests/unittests/scenario_builder/: test_scenario_builder.py  test_scenario_builder_dispatch.py
tests/unittests/simulation/: test_output_values.py  test_shift_validity_visitor.py  test_simulation_table_accessor.py  test_simulation_table_export.py  test_simulation_table_extra_outputs.py  test_simulation_table_mock.py  test_vectorized_linear_expr_builder.py  test_vectorized_linopy_builder.py
tests/unittests/system/: test_data_consistency.py  test_model.py  test_network.py  test_port.py  test_system.py
tests/unittests/system_parsing/: test_components_parsing.py
(+131 files in other folders)
